--- a/youtube-react/src/components/navigation/InputSearch.module.css
+++ b/youtube-react/src/components/navigation/InputSearch.module.css
@@ -1,15 +1,48 @@
+.inputBox {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    top: auto;
+    left: 0;
+}
+
 .inputSearch, .buttonSearch {
     all: unset;
     height: 40px;
 }
 
 .inputSearch {
-    border: 1px solid rgba(0, 0, 0, 0.103);
+    padding-left: 5px;
+    width: 40%;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-top-left-radius: 2px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 0;
 }
 
 .buttonSearch {
-    font-weight: 200;
-    border: 1px solid rgba(0, 0, 0, 0.103);
     padding: 0 20px;
+    background-color: rgb(246, 246, 246);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-top-left-radius: 0;
+    border-top-right-radius: 2px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 2px;
+    border-left: none;
+    transition: .1s;
+   
+}
+
+.buttonSearch:hover {
+    background-color: rgb(237, 237, 237);
+    box-shadow:0 2px 1px rgb(237, 237, 237);;
+}
+
+.searchIcon {
+    height: 1.4rem;
+    width: 1.4rem;
 }
 
