--- a/youtube-react/src/components/navigation/Navigation.module.css
+++ b/youtube-react/src/components/navigation/Navigation.module.css
@@ -1,6 +1,8 @@
 .navigation {
+    position: fixed;
     display: flex;
     align-items: center;
+    margin-left: 72px;
     width: 100%;
     height: 56px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
