--- a/youtube-react/src/components/VideoCard.module.css
+++ b/youtube-react/src/components/VideoCard.module.css
@@ -1,43 +1,42 @@
-.card {
-display: flex;
-flex-direction: column;
-/* flex-basis: 23%; */
-}
-
-.imgBox {
-    width: 278px;
-    height: 156px;
-    border-radius: 1px;
-    background-image: url(../assets/exampleIMG.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.descriptionBox {
+.cardDescription {
     display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
-.profileImg {
+.profileImgBox {
     width: 36px;
     height: 36px;
     border-radius: 50%;
     background-color: rgb(193, 192, 192);
 }
 
-.description {
-    /* width: 100%; */
+.profileImg {
+    width: 100%;
 }
 
-.description span:nth-child(1) {
-    display: block;
-    background-color: rgb(193, 192, 192);
-    width: 50px;
-    height: 20px;
+
+.descriptionBox {
+display: flex;
+flex-direction: column;
+flex-basis: 82%;
 }
 
-.description span:nth-child(2) {
-    display: block;
-    background-color: rgb(193, 192, 192);
-    /* width: 100%; */
-    height: 20px;
+.videoTitle {
+    font-size: 1.4rem;
+    font-weight: bold;
 }
+.date, .chanelTitle {
+    font-size: 1.2rem;
+    color: rgb(110, 110, 110);
+}
+
+.chanelTitle {
+    
+}
+
+.date {
+    align-self: flex-end;
+}
+
