--- a/youtube-react/src/components/navigation/Navigation.module.css
+++ b/youtube-react/src/components/navigation/Navigation.module.css
@@ -5,6 +5,7 @@
     margin-left: 72px;
     width: 100%;
     height: 56px;
+    background-color: #fff;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     z-index: 99;
 }
