--- a/youtube-react/src/index.css
+++ b/youtube-react/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
-body {
+body, html {
   font-family: 'Roboto', sans-serif;
+  font-size: 10px;
 }
 
