--- a/youtube-react/src/components/VideoCard.module.css
+++ b/youtube-react/src/components/VideoCard.module.css
@@ -10,6 +10,7 @@
     height: 36px;
     border-radius: 50%;
     background-color: rgb(193, 192, 192);
+    overflow: hidden;
 }
 
 .profileImg {
@@ -23,20 +24,35 @@ flex-direction: column;
 flex-basis: 82%;
 }
 
+.videoTitleBox {
+    max-height: 40px;
+    margin-bottom: 6px;
+    overflow: hidden;
+}
+
 .videoTitle {
     font-size: 1.4rem;
     font-weight: bold;
 }
-.date, .chanelTitle {
+ .channelTitle, .viewCount {
     font-size: 1.2rem;
     color: rgb(110, 110, 110);
 }
 
-.chanelTitle {
+.channelTitle {
     
 }
 
-.date {
-    align-self: flex-end;
+.subtitlesBox {
+    display: flex;
 }
 
+.viewCount {
+    white-space: nowrap;
+}
+
+.viewCount::after {
+  content: "•";
+  margin: 0 4px;
+  color: rgb(110, 110, 110);
+}
