--- a/src/components/navigation/InputSearch.module.css
+++ b/src/components/navigation/InputSearch.module.css
@@ -25,6 +25,7 @@
     border-top-right-radius: 0;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 0;
+    font-size: 1.6rem;
 }
 
 .buttonSearch {
