Style search input after focus.

--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -5,6 +5,11 @@
     margin-bottom: 30px;
 }
 
+.cardDescriptionWide {
+    flex-direction: column;
+    padding-left: 15px;
+}
+
 .profileImgBox {
     width: 36px;
     height: 36px;
@@ -13,8 +18,24 @@
     overflow: hidden;
 }
 
+.profileImgBoxWide {
+    order: 3;
+}
+
 .profileImg {
     width: 100%;
+}
+
+.headerImg {
+    width: 100%;
+    height: 155px;
+    object-fit: cover;
+}
+
+.headerImgWide {
+    width: 360px;
+    height: 200px;
+    object-fit: cover;
 }
 
 
@@ -30,10 +51,21 @@ flex-basis: 82%;
     overflow: hidden;
 }
 
+.videoTitleBoxWide {
+    order: -1;
+}
+
 .videoTitle {
     font-size: 1.4rem;
     font-weight: bold;
 }
+
+.videoTitleWide {
+    font-size: 1.8rem;
+    font-weight: 400;
+    
+}
+
  .channelTitle {
     font-size: 1.2rem;
     color: rgb(110, 110, 110);
@@ -43,6 +75,23 @@ flex-basis: 82%;
     
 }
 
+.channelTitleWide {
+    position: absolute;
+    top: 81px;
+    margin-left: 44px;
+}
+
 .subtitlesBox {
     display: flex;
+}
+
+.subtitlesBoxWide {
+    order:-1;
+}
+
+.descriptionWide {
+    position: absolute;
+    top: 120px;
+    font-size: 1.2rem;
+    color: rgb(110, 110, 110);
 }
