--- a/src/components/navigation/InputSearch.module.css
+++ b/src/components/navigation/InputSearch.module.css
@@ -1,4 +1,4 @@
-.inputBox {
+.inputForm {
     position: fixed;
     display: flex;
     align-items: center;
@@ -6,6 +6,12 @@
     width: 100vw;
     top: auto;
     left: 0;
+}
+
+.inputBox {
+    display: flex;
+    position: relative;
+    width: 40%;
 }
 
 ::placeholder {
@@ -19,13 +25,54 @@
 
 .inputSearch {
     padding-left: 5px;
-    width: 40%;
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-top-left-radius: 2px;
     border-top-right-radius: 0;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 0;
     font-size: 1.6rem;
+    
+   
+    
+}
+
+.inputSearch:focus {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: none;
+    box-shadow: inset 0 10px 2px -9px rgba(115, 115, 115, 0.3),
+    inset -10px 0 2px -9px rgba(115, 115, 115, 0.3);
+}
+
+.inputSearch:focus + .iconBox{
+    display: block;
+}
+
+.iconBox {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: -40.5px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-right: none;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 0;
+    box-shadow: inset 0 10px 2px -9px rgba(115, 115, 115, 0.3),
+    inset 10px 0 2px -9px rgba(115, 115, 115, 0.3);
+}
+
+.searchIconFocus {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    height: 1.8rem;
+    width: 1.8rem;
 }
 
 .buttonSearch {
