--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -29,6 +29,7 @@
 .headerImg {
     width: 100%;
     height: 155px;
+    /* height: 50%; */
     object-fit: cover;
 }
 
@@ -71,9 +72,6 @@ flex-basis: 82%;
     color: rgb(110, 110, 110);
 }
 
-.channelTitle {
-    
-}
 
 .channelTitleWide {
     position: absolute;
