fixed undefined profileObj[0]

--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -1,8 +1,20 @@
 .VideoPlayer {
-    background-color: #333;
     position: absolute;
+    padding: 20px 20px 0 20px;
     top:56px ;
     min-height: calc(100vh - 56px);
     width: 100%;
-    /* background-color:rgba(230, 230, 230, 0.238); */
+    background-color:rgba(230, 230, 230, 0.238);
+    
+}
+
+.playerContainer{
+
+}
+.playerSection {
+   
+}
+
+.relatedVideosSection {
+    
 }
