--- a/src/components/VideosSection.module.css
+++ b/src/components/VideosSection.module.css
@@ -5,5 +5,5 @@
     width:  calc(100vw - 72px);
     min-height: calc(100vh - 56px);
     background-color:rgba(230, 230, 230, 0.238);
-    /* background-color:red; */
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
