--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 56px;
     background-color: #fff;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
     z-index: 99;
 }
 .logoImage {
