Add sidebar class changer.

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -1,7 +1,11 @@
-.SideBarBox{
+.sideBarBox {
     position: fixed;
     width: 72px;
     height: 100%;
     background-color:white;
     z-index: 99;
+}
+
+.hide {
+    height: 56px;
 }
