--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -10,12 +10,23 @@
 
 .videoTitle {
     font-size: 1.8rem;
-    margin-top: 15px;
+    margin: 16px 0;
+    padding-bottom: 50px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.videoDetailsContainer {
+
+}
+
+.channelInfoBox {
+    display: flex;
 }
 
 .profileImgBox {
-    width: 36px;
-    height: 36px;
+    width: 48px;
+    height: 48px;
+    margin-right: 15px;
     border-radius: 50%;
     background-color: rgb(193, 192, 192);
     overflow: hidden;
@@ -24,6 +35,31 @@
 .profileImg {
     width: 100%;
 }
+
+.channelDetailsBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.channelTitle {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.subscriberCount {
+    font-size: 1.2rem;
+    color: #606060;
+}
+
+.videoDescriptionBox {
+    max-width: 576px;
+    margin-left: 63px;
+    font-size: 1.4rem;
+    white-space: pre-wrap
+}
+
 
 .playerContainer{
 
