--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -4,7 +4,7 @@
     top:56px ;
     min-height: calc(100vh - 56px);
     width: 100%;
-    background-color:rgba(230, 230, 230, 0.238);
+    background-color:rgb(249, 249, 249);
     
 }
 
@@ -54,12 +54,49 @@
 }
 
 .videoDescriptionBox {
+    display: flex;
+    flex-direction: column;
     max-width: 576px;
+    /* height: 86px; */
     margin-left: 63px;
     font-size: 1.4rem;
-    white-space: pre-wrap
+    white-space: pre-wrap;
+    /* overflow: hidden; */
 }
 
+.videoDescriptionText {
+    height: 86px;
+    overflow: hidden;
+}
+
+.videoDescriptionTextActive {
+    height: auto;
+}
+
+.descriptionButton {
+    all: unset;
+    position: relative;
+    margin-top: 23px;
+    width: 100px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #606060;
+}
+
+.buttonActive {
+    height: auto;
+}
+.buttonActive::after {
+    content: 'POKAŻ MNIEJ';
+    position: absolute;
+    width: 100%;
+    line-height: 18px;
+    padding-left: 3px;
+    top: 0;
+    left: 0;
+    background-color:rgb(249, 249, 249);
+
+}
 
 .playerContainer{
 
