--- a/src/components/VideosSection.module.css
+++ b/src/components/VideosSection.module.css
@@ -7,3 +7,11 @@
     background-color:rgba(230, 230, 230, 0.238);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width: 640px){
+    .VideosSection {
+       left: 0;
+       width: 100vw;
+       padding: 15px !important;
+    }
+}
