--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -21,10 +21,12 @@
 
 .relatedVideosSection {
     grid-area: relatedVideo;
+    margin-bottom: 20px;
 }
 
 .commentsSection {
     grid-area: comments;
+    margin-bottom: 15px;
 
 }
 
@@ -111,34 +113,10 @@
     height: auto;
 }
 
-/* .descriptionButton {
-    all: unset;
-    position: relative;
-    margin-top: 23px;
-    width: 100px;
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: #606060;
+.oval {
+    display: flex;
+    justify-content: center;
 }
-
-.buttonActive {
-    height: auto;
-}
-
-.buttonActive::after {
-    content: 'POKAŻ MNIEJ';
-    position: absolute;
-    width: 100%;
-    line-height: 18px;
-    padding-left: 3px;
-    top: 0;
-    left: 0;
-    background-color:rgb(249, 249, 249);
-
-} */
-
-
-
 
 @media (max-width: 999px){
     .VideoPlayer {
