--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -118,6 +118,35 @@
     justify-content: center;
 }
 
+.relatedVideoBtn {
+    all: unset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 7px;
+    margin-bottom: 10px;
+    color: #4c62da;
+    border: 1px solid #3245b3;
+    border-radius: 3px;
+    font-weight: 500;
+    font-size: 1.4rem;
+}
+
+.topLoaderBox {
+    position: fixed;
+    height: 2.3px;
+    width: 100%;
+    background-color: rgb(234, 234, 234);
+    z-index: 999;
+}
+
+.topLoader {
+    transition: .5s linear ;
+    height: 100%;
+    background-color: #FF0000;
+}
+
 @media (max-width: 999px){
     .VideoPlayer {
         grid-template-columns: 640px;
