--- a/src/components/VideosSection.module.css
+++ b/src/components/VideosSection.module.css
@@ -8,6 +8,21 @@
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+/* .topLoaderBox {
+    position: fixed;
+    height: 2.3px;
+    width: 100%;
+    background-color: rgb(234, 234, 234);
+    z-index: 999;
+}
+
+.topLoader {
+    transition: .5s linear ;
+    height: 100%;
+    background-color: #FF0000;
+} */
+
+
 @media (max-width: 640px){
     .VideosSection {
        left: 0;
