--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -1,16 +1,61 @@
 .sideBarBox {
     position: fixed;
+    display: flex;
+    left: 0;
+    top: 0;
+    flex-direction: column;
     width: 72px;
-    height: 100%;
+    min-height: 100%;
     background-color:white;
     z-index: 99;
+    overflow: hidden;
+}
+.btnIcon {
+    font-size: 2.3rem;
+}
+
+.btnTitle {
+    padding-top: 6px;
+}
+
+.sideBarBtn {
+    width: 72px;
+    height: 74px;
+    padding: 16px 0 14px;
+    background-color: #fff;
+    border: none;
+}
+
+.sideBarBtn:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.menuBtn {
+    padding: 0;
+    height: 56px;
+    line-height: 56px;
+}
+
+.btnIconShorts, .btnIconSub {
+    font-size: 2rem;
+}
+
+.btnIconLibrary {
+    font-size: 2.2rem;
+}
+
+.menuBtn:hover {
+    background-color: #fff;
 }
 
 .hide {
+    min-height:auto;
     height: 56px;
 }
+
 @media (max-width: 640px){
     .sideBarBox {
-        height: 56px;
+        min-height: auto;
+       height: 56px;
     }
 }
