--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -20,6 +20,9 @@
 }
 
 .relatedVideosSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     grid-area: relatedVideo;
     margin-bottom: 20px;
 }
@@ -131,6 +134,7 @@
     border-radius: 3px;
     font-weight: 500;
     font-size: 1.4rem;
+
 }
 
 .topLoaderBox {
