--- a/src/components/VideoPlayer.module.css
+++ b/src/components/VideoPlayer.module.css
@@ -5,7 +5,6 @@
     min-height: calc(100vh - 56px);
     width: 100%;
     background-color:rgb(249, 249, 249);
-    
     display: grid;
     justify-content: center;
     grid-template-columns: minmax(min-content, 50%) min-content;
@@ -22,7 +21,7 @@
 .relatedVideosSection {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     grid-area: relatedVideo;
     margin-bottom: 20px;
 }
@@ -129,6 +128,7 @@
     width: 100%;
     padding: 7px;
     margin-bottom: 10px;
+    align-self: center;
     color: #4c62da;
     border: 1px solid #3245b3;
     border-radius: 3px;
